# cookbook

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  README.md  app.py  compose.yaml  config.py  openapi.json  pyproject.toml  setup.cfg  setup.py  uwsgi.ini  wsgi.py
.github/workflows/: build.yml  docker.yml  test.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/auth/: actions.py  db.py  models.py  router.py  utils.py
backend/app/core/: config.py  database.py  db.py  models.py  router.py  security.py
backend/app/recipes/: db.py  models.py  router.py
backend/app/users/: actions.py  db.py  (+3 more)
cookbook/: __init__.py  app.py  app.sh  application.py  auth.py  config.py  db.py  main.py  recipes.py  requirements.txt  schema.sql  wsgi.py
cookbook/auth/: storage.py  utils.py  validation.py  views.py
cookbook/main/: views.py
cookbook/parsing/: ingredient_parser.py  weight.py
cookbook/recipes/: exporter.py  parsing.py  storage.py  utils.py  validation.py  views.py
cookbook/static/: edit.js  main.css  main.js  pico.css  recipe-add.css  recipe-edit.css  recipe-view.css
cookbook/templates/: base.html  recipe-view.html  recipes-overview.html
deployment/: demo.yml  deploy-demo.sh  deploy.sh  dev.yml  example.env  uwsgi.ini
frontend/: README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  index.jsx  routes.js
scripts/: clean.sh  populate.sh
templates/: recipes-overview.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_recipes.py
(+82 files in other folders)
