[metadata]
name = cookbook
version = 1.0.0
url = https://codemu.ch/cookbook
license = MIT
description = A personal recipe management and meal planner app.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    cookbook
